--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,15 @@ section.title-sliding-cards {
 
 /* Blue card */
 
+section.home-sliding-cards {
+    margin: auto;
+    max-width: 1150px;
+    font-size: 20px;
+    font-family: "Noto Serif";
+    font-weight: normal;
+    gap: 50px;
+}
+
 section.home-sliding-cards div.card-container {
     margin: auto;
     max-width: 1200px;
@@ -365,7 +374,6 @@ section.art-sliding-cards div.card-container a {
     margin: auto;
     max-width: 280px;
     gap: 40px;
-    padding: 10px;
 }
 
 section.art-sliding-cards div.cardred {
